--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,19 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Mukena</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-item menuClose="" *ngFor="let page of pages" (click)="open(page)">
+        {{ page.title}}
+      </button>
+      <button ion-item="" menuClose="">
+        Close
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav [root]="rootPage" #content></ion-nav>
