--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -9,6 +9,10 @@ page-cart {
         font-size: 12px;
         color: darkslategray;
       }
+      .subtotal {
+        font-size: 20px;
+        color: darkblue;
+      }
     }
   }
   ion-icon {
