--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -11,11 +11,11 @@ page-cart {
       }
       .subtotal {
         font-size: 20px;
-        color: darkblue;
+        color: hotpink;
       }
     }
   }
   ion-icon {
     font-size: 20px !important; //Preferred size here
-  } 
+  }
 }
