--- a/src/pages/orderstatus/orderstatus.scss
+++ b/src/pages/orderstatus/orderstatus.scss
@@ -1,6 +1,16 @@
 page-orderstatus {
-    ion-scroll {
-        width: 100%;
-        height: 100%;
-      }
+  ion-segment {
+    justify-content: space-between;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+      display: none;
+    }
+
+    ion-segment-button.segment-button {
+      flex: 1 0 150px!important;
+    }
+  }
 }
