--- a/src/pages/orderstatus/orderstatus.scss
+++ b/src/pages/orderstatus/orderstatus.scss
@@ -11,6 +11,7 @@ page-orderstatus {
 
     ion-segment-button.segment-button {
       flex: 1 0 150px!important;
+      font-size: 12px!important;
     }
   }
 }
