--- a/src/pages/address/address.scss
+++ b/src/pages/address/address.scss
@@ -1,3 +1,8 @@
 page-address {
-
+  ion-card {
+    border-radius:15px !important;
+  }
+  ion-item-divider{
+    border-radius:15px !important;
+  }
 }
