--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -4,7 +4,6 @@ page-cart {
       h2 {
         font-weight: bold;
       }
-
       .price {
         font-size: 12px;
         color: darkslategray;
@@ -14,5 +13,8 @@ page-cart {
         color: hotpink;
       }
     }
+  }
+  ion-card {
+    border-radius:15px !important;
   }
 }
