--- a/src/pages/delivery/delivery.scss
+++ b/src/pages/delivery/delivery.scss
@@ -1,3 +1,11 @@
 page-delivery {
-
+  ion-card {
+    border-radius:15px !important;
+  }
+  ion-item-divider{
+    border-radius:15px !important;
+  }
+  ion-select{
+    max-width: 90% !important;// your choice :)
+  }
 }
