--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,8 @@
 page-home {
+  .searchbar-md .searchbar-input {
+    border-radius: 15px!important;
+  }
+
   ion-slides {
     width: 100%;
     height: 130px;
