--- a/src/pages/orderconfirmation/orderconfirmation.scss
+++ b/src/pages/orderconfirmation/orderconfirmation.scss
@@ -1,3 +1,18 @@
 page-orderconfirmation {
+  ion-list {
+    ion-item {
+      h2 {
+        font-weight: bold;
+      }
 
+      .price {
+        font-size: 12px;
+        color: darkslategray;
+      }
+      .subtotal {
+        font-size: 20px;
+        color: hotpink;
+      }
+    }
+  }
 }
