--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,6 +32,9 @@ $app-direction: ltr;
 // to match your app's branding. Ionic uses a Sass map of
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
+$toast-ios-background:(#DE5D83);
+$toast-md-background:(#DE5D83);
+$toast-wp-background:(#DE5D83);
 
 $colors: (
   primary:    #faafc8,
