update product detail

--- a/src/pages/productdetail/productdetail.scss
+++ b/src/pages/productdetail/productdetail.scss
@@ -1,3 +1,14 @@
 page-productdetail {
-
+  .scroll-content {
+    padding-top: 0 !important;
+  }
+  .back-button-icon-md {
+    color: black;
+  }
+  .back-button-icon-ios {
+    color: black;
+  }
+  .back-button-icon-wp {
+    color: black;
+  }
 }
