--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,6 +5,10 @@ ion-card {
 ion-item-divider{
   border-radius:15px !important;
 }
+.searchbar-input {
+  border: 0 !important;
+  box-shadow: none !important;
+}
 
 // App Global Sass
 // --------------------------------------------------
