--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,6 +3,11 @@ page-home {
     border-radius: 15px!important;
   }
 
+  ion-card {
+    border: 1px;
+    box-shadow: none !important;
+  }
+
   ion-slides {
     width: 100%;
     height: 130px;
