--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -6,6 +6,9 @@ ion-avatar > img{
   height: 60px!important;
 }
 
+button{
+  box-shadow: none !important;
+}
 ion-card {
   border-radius:15px !important;
 }
