--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -10,6 +10,8 @@ button{
   box-shadow: none !important;
 }
 ion-card {
+  border: 0.5px solid;
+  box-shadow: none !important;
   border-radius:15px !important;
 }
 ion-item-divider{
